tests/baselines/reference/for-of16.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of16.ts(8,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of16.ts (1 errors) ====
    class StringIterator {
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new StringIterator) { } // Should fail
              ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.